<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tatoeba4android</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Fragment Tabs</string>

    <string name="From">From:</string>
    <string name="To">To:</string>

    <string name="searchTabCaption">Search</string>
    <string name="browseTabCaption">Browse</string>


    <string name="srcLanguage_prompt">From</string>
    <string name="destLanguage_prompt">To</string><string name="defaultSearchText">Your search items</string>
    <string name="searchButtonLabel">Search</string>
    <string name="searchBoxGreeting">Enter the words to search for</string>
    <string name="sentenceRequestBoxGreeting">Enter the sentence ID</string>
    <string name="randomSentenceButtonLabel">Random sentences</string>
    <string name="resultsTabCaption">Results</string>
    <string name="resultCurrentPage">Current page:</string>
    <string name="fromLanguage">Language:</string>
    <string name="quantity">Quantity:</string>
    <string name="sentenceNumber">Sentence Nº </string>
    <string name="toast_sentenceNotFound">Sentence not found.</string>
    <string name="toast_sentencesNotFound">Sentences not found.</string>
    <string name="toast_randomSentencesNotFound">Could not find any random sentences.</string>


    <string-array name="language_array">
        <item>..</item>
        <item>eng</item>
        <item>fra</item>
        <item>nld</item>
        <item>est</item>
        <item>rus</item>
        <item>fin</item>
    </string-array>

    <string-array name="items_number_array">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>25</item>
        <item>50</item>
    </string-array>

</resources>
